# sugoi-lt-obs-screen

./: .env.example  .eslintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  renovate.json  tsconfig.json  vite.config.ts
.github/workflows/: check.yml
public/: index.html
src/: index.css  index.tsx
src-tauri/: Cargo.toml  presentations.yaml  tauri.conf.json  todo.md
src-tauri/migrations/2021-02-21-073525_create_presentations/: down.sql  up.sql
src-tauri/src/: cmd.rs  discord.rs  main.rs  model.rs  obs.rs  presentations.rs  presents.rs  schema.rs  twitter.rs  youtube.rs
src-tauri/src/client/: discord.rs  mod.rs  twitter.rs  youtube.rs
src-tauri/src/client/tweet_template/: begin_presentation.fmt.txt
src-tauri/src/client/tweet_template/footer/: discord.fmt.txt  twitter.txt  youtube.fmt.txt
src-tauri/src/discord/: mod.rs
src/comps/: App.tsx
src/comps/ltscreen/: LTScreen.tsx
src/comps/ltscreen/parts/: Footer.tsx  Main.tsx  Notification.tsx
src/comps/ltscreen/parts/main/: Mask.tsx  Timeline.tsx
src/comps/parts/: Footer.tsx  Main.tsx  Notification.tsx
src/comps/parts/main/: Mask.tsx  Timeline.tsx
src/comps/waiting/: WaitingScreen.tsx
src/comps/waiting/parts/: PresenterList.tsx  PresenterListElement.tsx  Title.tsx
src/lib/: WindowHooks.ts
src/lib/data/: ScreenData.ts  reducer.ts
src/style/: app.module.scss  color.variables.scss  layout.variables.scss
src/style/comps/: App.module.scss  footer.module.scss  main.module.scss  notification.module.scss
src/style/ltscreen/: main.module.scss
src/style/waiting/: waiting_screen.module.scss
