[package]
name = "sugoi-lt-obs-screen"
version = "0.1.0"
description = "this is sugoi LT OBS screen"
authors = [ "approvers" ]
license = ""
repository = ""
default-run = "sugoi-lt-obs-screen"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "event" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15"
anyhow = "1.0"
regex = "1.4"
parking_lot = "0.11.1"
tokio-stream = "0.1.3"

  [dependencies.egg-mode]
  git = "https://github.com/egg-mode-rs/egg-mode.git"
  default_features = false
  features = [ "rustls" ]

  [dependencies.libsqlite3-sys]
  version = "0.18"
  features = [ "min_sqlite_version_3_7_16", "bundled" ]

  [dependencies.diesel]
  version = "1.4"
  features = [ "sqlite" ]

  [dependencies.tokio]
  version = "1.2"
  features = [ "rt-multi-thread", "parking_lot" ]

  [dependencies.serenity]
  version = "0.10"
  default-features = false
  features = [ "rustls_backend", "cache", "client", "gateway", "model" ]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "sugoi-lt-obs-screen"
path = "src/main.rs"
