[package]
name = "sugoi-lt-obs-screen"
version = "0.1.0"
description = "this is sugoi LT OBS screen"
authors = [ "approvers" ]
license = ""
repository = ""
default-run = "sugoi-lt-obs-screen"
edition = "2018"
build = "src/build.rs"

[features]
twitter = [ "egg-mode" ]
discord = [ "serenity" ]
youtube = [ "headless_chrome" ]
obs = [ "obws" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]
default = [ "twitter", "discord", "youtube", "obs" ]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "event" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15"
anyhow = "1.0"
regex = "1.4"
parking_lot = "0.11.1"
tokio-stream = "0.1.3"
failure = "0.1.8"
futures = "0.3"
serde_yaml = "0.8"
lazy_static = "1.4.0"
async-trait = "0.1"

  [dependencies.obws]
  version = "0.4"
  optional = true

  [dependencies.egg-mode]
  git = "https://github.com/egg-mode-rs/egg-mode.git"
  optional = true
  default_features = false
  features = [ "rustls" ]

  [dependencies.tokio]
  version = "1.2"
  features = [ "rt-multi-thread", "parking_lot" ]

  [dependencies.serenity]
  version = "0.10"
  optional = true
  default-features = false
  features = [ "rustls_backend", "cache", "client", "gateway", "model" ]

  [dependencies.headless_chrome]
  version = "0.9"
  optional = true
  features = [ "fetch" ]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[[bin]]
name = "sugoi-lt-obs-screen"
path = "src/main.rs"
