[package]
name = "sugoi-lt-obs-screen"
version = "0.1.0"
description = "this is sugoi LT OBS screen"
authors = ["approvers"]
license = ""
repository = ""
default-run = "sugoi-lt-obs-screen"
edition = "2018"
build = "src/build.rs"

[features]
discord = ["serenity"]
youtube = ["headless_chrome"]
obs = ["obws"]
# default = ["discord", "youtube", "obs"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
regex = "1.10"
parking_lot = "0.12"
tokio-stream = "0.1"
failure = "0.1.8"
futures = "0.3"
serde_yaml = "0.9"
async-trait = "0.1"
rand = "0.8"
once_cell = "1.18.0"

[dependencies.obws]
version = "0.11"
optional = true

[dependencies.tokio]
version = "1.34"
features = ["rt-multi-thread", "parking_lot"]

[dependencies.serenity]
version = "0.11"
optional = true
default-features = false
features = ["rustls_backend", "cache", "client", "gateway", "model"]

[dependencies.headless_chrome]
version = "1.0"
optional = true
features = ["fetch"]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[[bin]]
name = "sugoi-lt-obs-screen"
path = "src/main.rs"
